moving the changes of yousra branch into this one with no change on the name of the folder

--- a/application7/src/client/www/index.html
+++ b/application7/src/client/www/index.html
@@ -29,7 +29,7 @@
 <body>
   <div id="app"class="theme-color">
     <!-- Your main view, should have "view-main" class -->
-    
+
     <div class="view view-main view-init safe-areas"></div>
   </div>
   <!-- CORDOVA_PLACEHOLDER_DONT_REMOVE -->
@@ -41,5 +41,9 @@
   <script src="js/routes.js"></script>
   <!-- App scripts -->
   <script src="js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaGbAuOo90Q9JnV4aHruXPNqjxH5Kcnzs"></script>
+  <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script> -->
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaGbAuOo90Q9JnV4aHruXPNqjxH5Kcnzs&callback=initMap"></script> -->
 </body>
 </html>
