--- a/application7/src/client/www/pages/addFriends.html
+++ b/application7/src/client/www/pages/addFriends.html
@@ -12,7 +12,7 @@
 
   <!-- Scrollable page content-->
   <div class="page-content">
-   
+
     <div class="block-title">List of users (resp members ?)</div>
       <div class="list links-list">
         <ul>
@@ -32,45 +32,15 @@ return {
     async data() {
       let users = [];
       try {
-        users = await fetch( app.data.serverAddress +"/users")
+        users = await fetch( app.data.serverAddress + "/friends/addFriends/" + app.data.user.id)
             .then(res => res.json())
       }
       catch(err) {
         app.dialog.alert("Error " + err);
       }
-
-      let friends = [];
-      try {
-        friends = await fetch( app.data.serverAddress +"/friends")
-          .then(response => response.json())
-      }
-      catch(err){
-        app.dialog.alert("Error " + err);
-      }
       finally{
-        if(friends.length !=0){
-          for (var i=0 ; i <friends.length ; i++){
-            for(var j =0;j<users.length;j++){
-              if(friends[i].receiverId === users[j]._id && friends[i].senderId === app.data.user.id){
-                enleve_inscrit=users.splice(j,1)
-              }
-              else if(friends[i].senderId === users[j]._id && friends[i].receiverId === app.data.user.id){
-                enleve_inscrit1=users.splice(j,1)
-              }
-            }
-          }
-        }
-        for(var j=0;j<users.length;j++){
-          if(users[j]._id === app.data.user.id){
-            enleve_inscrit1 = users.splice(j,1)
-          }
-        }
+         return {users:users};
       }
-      return { users: users };
-     
-    //alert(JSON.stringify(friends))
-    return { friends: friends };
-
     },
     methods : {
       add: function(nom,prenom,id) {
@@ -89,7 +59,7 @@ return {
           .catch(err => app.dialog.alert('Error ' + err))
           .finally(() => {
             app.dialog.alert('Friend request sent to ' + nom + ' ' + prenom)
-            this.$router.navigate('/addfriends');
+            this.$router.navigate('/home');
           })
       },
       nextppage: function(){
@@ -98,7 +68,7 @@ return {
             name:'friends',
           }
         );
-      },
+      }
     }
 }
 </script>
