--- a/application7/src/client/www/pages/loginForm.html
+++ b/application7/src/client/www/pages/loginForm.html
@@ -32,7 +32,7 @@
             </li>
         </form>
         <div class="block block-strong row">
-          <div class="col"><a class="button convert-form-to-data" href="#" @click = "login">Login</a></div>
+          <div class="col"><a class="button convert-form-to-data" href="#" @click ="login">Login</a></div>
         </div>
     </div>
 </template>
@@ -41,37 +41,19 @@ return {
     methods:{
       login: async function() {
         let mail = document.getElementById('mail').value
-        let password = document.getElementById('password').value
+        let password = document.getElementById('password').value;
+
         try{
-          let reponse = await fetch( app.data.serverAddress +"/login", {
+          let response = await fetch( app.data.serverAddress +"/login", {
             method  : "POST",
             headers : { "Content-Type": "application/json" },
             body    : JSON.stringify({
               mail     : mail,
-              password : password,
+              password : CryptoJS.AES.encrypt(password,'secret key 123').toString(),
             })
           })
           .then(res =>res.json())
-          // .then(res => (res.error) ? this.$app.dialog.alert(res.error) : this.$router.navigate('/profile/'+res.token))
-          .then(res => (res.error) ? app.dialog.alert(res.error) : this.$router.navigate('/home'))
-
-          //  this.$router.navigate(
-          // {
-          //   name: 'profil',
-          //   params: {obj:res.token , monid : res.id , monnom : res.lastname ,monprenom: res.firstname},
-          // }))
-          // .then(function(res){
-          //   if(res.error){
-          //     this.$app.dialog(res.error)
-          //   }
-          // })
-          //     this.$app.dialog.alert(res.error));
-          //   }
-          // )
-          //
-          // if(reponse.status === 400){
-          //   this.$app.dialog.alert('Vous devez saisir tous les champs');
-          // }
+          .then(res => (res.error) ? this.$app.dialog.alert(res.error) : this.$router.navigate('/home'))
         }
         catch(err){
           app.dialog.alert('Error' + err);
