--- a/application7/src/client/www/index.html
+++ b/application7/src/client/www/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/icons.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
-<body>
+<body class="is-preload">
   <div id="app"class="theme-color">
     <!-- Your main view, should have "view-main" class -->
     
