--- a/application7/src/client/www/pages/positiononmap.html
+++ b/application7/src/client/www/pages/positiononmap.html
@@ -1,8 +1,8 @@
 <template>
-  <div class="page" data-name="positiononmap">
+  <div class="page" data-name="friendOnMap">
 
     <div class="page-content">
-      <div id='positionmap' style="height:100%;width:100%;"></div>
+      <div id='mapfriend' style="height:100%;width:100%;"></div>
     </div>
 
   </div>
@@ -12,23 +12,20 @@
 return {
       on: {
         pageInit: function(e, page) {
-          let response = fetch(app.data.serverAddress + "/pastposition/" + this.$route.params.idposition)
-                            .then(res => res.json())
-                            .then(function(res){
-                                    var map = new google.maps.Map(document.getElementById('positionmap'), {
-                                      zoom: 8,
-                                      center: {lat: parseInt(res[0].latitude), lng: parseInt(res[0].longitude)}
-                                    });
 
-                                    var myLatLng = { lat: parseInt(res[0].latitude), lng: parseInt(res[0].longitude) };
-                                    var marker = new google.maps.Marker(
-                                        {
-                                          position: myLatLng,
-                                          map: map,
-                                        });
+          alert(this.$route.params.latitude + ' ' + this.$route.params.longitude)
+          var map = new google.maps.Map(document.getElementById('mapfriend'), {
+            zoom: 8,
+            center: {lat: parseInt(this.$route.params.latitude), lng: parseInt(this.$route.params.longitude)}
+          });
 
-                            })
-        }
-    }
-}
+          var myLatLng = { lat: parseInt(this.$route.params.latitude), lng: parseInt(this.$route.params.longitude) };
+          var marker = new google.maps.Marker(
+              {
+                position: myLatLng,
+                map: map,
+              });
+          }
+      }
+  }
 </script>
