--- a/application7/src/client/www/pages/notification.html
+++ b/application7/src/client/www/pages/notification.html
@@ -1,136 +1,119 @@
 <template>
 <div class="page" data-name="home">
-  <div class="appbar">
-    <div class="left">
-      <a href="#" class="button" @click ='previouspage'>
-        <i class="icon icon-back"></i>
-        Home
-        <span class="if-not-md">Back</span>
-      </a>
-    </div>
+  <div class="navbar">
+    <div class="navbar-bg"></div>
+          <div class="navbar-inner">
+            <div class="left">
+              <a href="#" class="button" @click ='previouspage'>
+                <i class="icon icon-back"></i>
+               
+                <span class="if-not-md">Back</span>
+              </a>
+            </div>
+            <div class="title"> Friend requests </div>
+          </div>
   </div>
 
   <!-- Scrollable page content-->
   <div class="page-content">
-    <div class="block-title">Demande d'ajout d'amis</div>
-      <div class="list links-list">
-        <ul>
-          {{#each myfriends}}
-          <li>{{expediteurNom}} {{expediteurPrenom}} </li>
-          <li>Statut de la demande : {{statut}}</li>
-          {{#js_if "this.statut === 'en attente'"}}
-            <div class="block block-strong row">
-              <div class="col"><a class="button convert-form-to-data" href="#" @click="accepter('{{expediteur}}','{{expediteurNom}}','{{expediteurPrenom}}','{{destinataireNom}}','{{destinatairePrenom}}')">Accepter l'invitation</a></div>
-              <div class="col"><a class="button convert-form-to-data" href="#" @click="refuser('{{expediteur}}','{{expediteurNom}}','{{expediteurPrenom}}','{{destinataireNom}}','{{destinatairePrenom}}')">Refuser l'invitation</a></div>
+    <div class="list ">
+      <ul>
+        {{#each myfriends}}
+          <li>
+            <div class="row">
+            <h3>{{pseudo}}</h3>
+             <div class="wrapper-button">
+                  <div class="row">
+                    <a class="button convert-form-to-data" @click="accepter('{{id}}','{{pseudo}}')">
+                      <i class="icon material-icons if-md">check</i>
+                      Accept</a>
+                    <a class="button convert-form-to-data" href="#"  @click="refuser('{{id}}','{{pseudo}}')">
+                      <i class="icon material-icons if-md">clear</i>
+                      Delete</a>
+                </div>
             </div>
-          {{/js_if}}
-          {{/each}}
-        </ul>
-      </div>
+          </div>
+          </li>
+        {{/each}}
+      </ul>
+    </div>
+    <div class="list ">
+      <ul>
+        {{#each acceptedReq}}
+        {{#js_if "this.status ===  'accepted'"}}
+        <li class="swipeout">
+          <div class="item-content swipeout-content">
+            <div class="item-inner">
+              <div class="item-title">{{pseudo}} accepted your invitation</div>
+            </div>
+          </div>
+          <div class="swipeout-actions-left">
+            <a href="#" class="swipeout-delete">Delete</a>
+          </div>
+          {{else}}
+            {{#js_if "this.status ===  'refused'"}}
+            <li class="swipeout">
+              <div class="item-content swipeout-content">
+                <div class="item-inner">
+                  <div class="item-title">{{pseudo}} refused your invitation</div>
+                </div>
+              </div>
+              <div class="swipeout-actions-left">
+                <a href="#" class="swipeout-delete">Delete</a>
+              </div>
+            </li>
+            {{/js_if}}
+           {{/js_if}}
+        {{/each}}
+      </ul>
+    </div>
     </div>
   </div>
 </template>
 <script>
 return{
   async data(){
-    let myfriends = [];
+    var myfriends = [];
+    var acceptedReq = [];
     try {
-      myfriends = await fetch("http://localhost:3000/friend")
-          .then(res => res.json())
+      myfriends = await app.methods.tokenHandlingFetch("/friends/received/pending")
+          .then(res => res.json()),
+      acceptedReq = await app.methods.tokenHandlingFetch( "/friends/sent/all")
+        .then(res => res.json())
+     
     }
     catch(err) {
-      this.$app.dialog.alert("Error " + err);
+      app.dialog.alert("Error " + err);
     }
     finally{
-      let i = myfriends.length-1
-      //for (var i=0;i<myfriends.length;i++){
-      while(i>=0){
-        if(myfriends[i].statut === 'accepted' && myfriends[i].expediteur === this.$route.params.myid){
-          this.$app.dialog.alert(myfriends[i].destinataireNom + ' ' + myfriends[i].destinatairePrenom + " a accepté votre demande d'ajouts")
-          enleve_friend = myfriends.splice(i,1);
-        }
-        else if(myfriends[i].statut === 'refused' && myfriends[i].expediteur === this.$route.params.myid){
-            this.$app.dialog.alert(myfriends[i].destinataireNom + ' ' + myfriends[i].destinatairePrenom + " a refusé votre demande d'ajouts")
-            enleve_friend1 = myfriends.splice(i,1);
-        }
-        else if(myfriends[i].statut === 'en attente' && myfriends[i].expediteur === this.$route.params.myid){
-            enleve_friend2 = myfriends.splice(i,1);
-        }
-        else if(myfriends[i].expediteur !== this.$route.params.myid && myfriends[i].destinaireid !== this.$route.params.myid){
-          enleve_friend3 = myfriends.splice(i,1);
-        }
-        i=i-1
-      }
+      console.log('num is'+ Object.keys(myfriends).length);
+      return {myfriends : myfriends, acceptedReq: acceptedReq};
     }
-    return {myfriends : myfriends};
+
+   
   },
   methods : {
-    accepter: function(idexp,nomexp,prenomexp,nomdest,prenomdest){
-      for(var i=0 ; i < this.myfriends.length ; i++){
-        if(this.myfriends[i].expediteur === idexp && this.myfriends[i].destinaireid === this.$route.params.myid){
-          fetch('http://localhost:3000/friend', {
-              method: 'PUT',
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({
-                myyid:this.$route.params.myid,
-                idexpediteur:idexp,
-                nomexpediteur:nomexp,
-                prenomexpediteur:prenomexp,
-                nomdestinataire:nomdest,
-                prenomdestinataire:prenomdest,
-                statut:'accepted',
-              })
+    accepter: function(id, pseudo){
+        app.methods.tokenHandlingFetch(  "/friend/accept/"+id, {method: 'PUT'})
+          .then(() => {
+            app.dialog.alert(pseudo+ " is now in your friend list.")
+            this.$router.navigate('/friendlist');
           })
-          .catch(err => this.$app.dialog.alert('Error ' + err))
-          .finally(() => {
-            this.$app.dialog.alert(nomexp + ' ' + prenomexp + " est désormais dans votre liste d'amis.")
-            this.$router.navigate(
-              {
-                name:'friends',
-                params:{tokenn:this.$route.params.tokeen,idd:this.$route.params.myid,noom:this.$route.params.monnomm,prenoom:this.$route.params.monprenomm},
-              }
-            );
-          })
-        }
-      }
+          .catch(err => app.dialog.alert('Error ' + err))
     },
-    refuser: function(idexp,nomexp,prenomexp,nomdest,prenomdest){
-      for(var i=0;i<this.myfriends.length;i++){
-        if(this.myfriends[i].expediteur === idexp && this.myfriends[i].destinaireid === this.$route.params.myid){
-          fetch('http://localhost:3000/friend', {
-              method: 'PUT',
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({
-                myyid:this.$route.params.myid,
-                idexpediteur:idexp,
-                nomexpediteur:nomexp,
-                prenomexpediteur:prenomexp,
-                nomdestinataire:nomdest,
-                prenomdestinataire:prenomdest,
-                statut:'refused',
-              })
+    refuser: function(id, pseudo){
+          app.methods.tokenHandlingFetch( "/friend/refuse/"+id, { method: 'PUT'})
+          .then(() => {
+            app.dialog.alert("You refused the friend's request of " +  pseudo)
+            this.$router.navigate('/friendlist');
           })
-          .catch(err => this.$app.dialog.alert('Error ' + err))
-          .finally(() => {
-            this.$app.dialog.alert("Vous avez refusé la demande d'ajout envoyée par " + nomexp + ' ' + prenomexp)
-            this.$router.navigate(
-              {
-                name:'friends',
-                params:{tokenn:this.$route.params.tokeen,idd:this.$route.params.myid,noom:this.$route.params.monnomm,prenoom:this.$route.params.monprenomm},
-              }
-            );
-          }) //finally
-        }
-      }
+          .catch(err => app.dialog.alert('Error ' + err))
+
     },
     previouspage:function(){
-      this.$router.navigate(
-        {
-          name: 'mapage',
-          params:{obj:this.$route.params.tokeen,monid:this.$route.params.myid,monnom:this.$route.params.monnomm,monprenom:this.$route.params.monprenomm},
-        }
-      );
-    }
+      this.$router.navigate('/home');
+    },
+
   }
 }
 </script>
