--- a/application7/src/client/www/pages/pastposition.html
+++ b/application7/src/client/www/pages/pastposition.html
@@ -2,55 +2,37 @@
 <div class="page" data-name="pastposition">
   <!-- Appbar -->
   <div class="appbar">
-    <div class="appbar-inner">
-      <div class="left">
-        <a href="#" class="link icon-only panel-open" data-panel="left">
-          <i class="icon f7-icons if-not-md">menu</i>
-          <i class="icon material-icons if-md">menu</i>
-        </a>
-
-      </div>
-     
+    <div class="left">
+      <a class="button" href="/home">
+        <i class="icon icon-back"></i>
+        Friends
+        <span class="if-not-md">Back</span>
+      </a>
     </div>
   </div>
-  
   <!-- Scrollable page content-->
   <div class="page-content">
-    
-      <div class="title-big-text">
-        <h1>History</h1>
+    <div class="block-title">My past positions</div>
+
+      <div class="list links-list">
+        <ul>
+          {{#each pastpositions}}
+          <a href="#"><li>Cette position (latitude : {{latitude}} , longitude : {{longitude}}) a été activée à {{dateTime}} , je l'ai désormais désactivée </li></a>
+          <div class="block block-strong row">
+            <div class="col"><a class="button convert-form-to-data" href ='#' @click="delete('{{_id}}')">Delete position</a></div>
+          </div>
+          <div class="block block-strong row">
+            <div class="col"><a class="button convert-form-to-data" href ='#' @click="positionOnmap('{{_id}}')">Visualize on a map</a></div>
+          </div>
+          {{/each}}
+        </ul>
       </div>
-
-    <div class="block-title">Swipe left for more options</div>
-
-    <div class="list media-list">
-      <ul>
-        {{#each pastpositions}}
-
-          <li class="swipeout deleted-callback">
-            <div class="swipeout-content">
-              <a href="#" class="item-link item-content">
-              <div class="item-inner">
-                <div class="item-title-row">
-                  <div class="item-title">{{dateTime}}</div>
-                  <div class="item-after">17:14</div>
-                </div>
-                <div class="item-text">
-                  <b>Lat</b>: {{latitude}} <br> <b>Long</b>: {{longitude}}  
-                </div>
-              </div>
-              </a>
-            </div>
-            <div class="swipeout-actions-right">
-              <a href="#" class="swipeout-delete" @click="delete('{{_id}}')">Delete</a>
-              <a href="#" class="color-green alert-reply " @click="positionOnmap('{{_id}}')">On Map</a>
-            </div>
-          </li>
-
-
-        {{/each}}
-      </ul>
     </div>
+
+    <div class="block block-strong row">
+       <div class="col"><a class="button convert-form-to-data" href="#" @click='submit'>Return home</a></div>
+    </div>
+
   </div>
 </div>
 </template>
@@ -58,9 +40,8 @@
 
 return {
   async data (){
-    let pastpositions = [];
       try {
-        pastpositions = await fetch(app.data.serverAddress + "/pastpositions/" + app.data.user.id)
+        const pastpositions = await app.methods.tokenHandlingFetch("/pos/past" )
           .then(res => res.json());
       } catch(err) {
         this.$app.dialog.alert("Error " + err);
@@ -72,12 +53,13 @@ return {
       this.$router.navigate('/home');
     },
     delete : function(idposition){
-        fetch( app.data.serverAddress +"/deletedposition/"  + idposition , {
-            method: "DELETE",
+      app.methods.tokenHandlingFetch( "/pos/delete/"  + idposition , { method: "DELETE",})
+        .then(resp => {
+          app.dialog.alert('This position has been deleted')
+          this.$router.navigate('/pastpositions');
         })
         .catch(err => app.dialog.alert('Error ' + err))
-        app.dialog.alert('This position has been deleted')
-        this.$router.navigate('/home');
+
     },
     positionOnmap : function(id){
       this.$router.navigate(
@@ -85,9 +67,7 @@ return {
           name:'latlngOnmap',
           params: {idposition : id},
         });
-    },
-
-  },
-
+    }
+  }
 }
 </script>
